--- a/app.json
+++ b/app.json
@@ -82,5 +82,5 @@
       "ctrl"
    ],
    "name": "CTRL",
-   "repository": "https://github.com/thec0ala/ctrl"
+   "repository": "https://github.com/thec0ala/babasinbotu"
 }
