--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-telethon >1.17.0, <1.18.3
 future
 emoji
 requests
@@ -12,28 +11,9 @@ lxml
 demjson
 PyLyrics
 wget
-geopy
-aiohttp>=2.2.5
 gTTS
-Pillow>=4.2.0
-translations
+#telegram
 zalgo_text
-nltk
 pynewtonmath
 bs4
 telegraph
-psycopg2
-tldextract
-gsearch
-wikipedia
-pyowm
-PyLyrics
-spongemock
-psutil
-translator
-googletrans==3.1.0a0
-httpx[http2]
-tswift
-speedtest-cli
-bleach
-git+https://github.com/starry69/python-markdown2.git
